rhdlc/test/compile-fail/multiple-definition-struct-fn/expected.txt
error: the name `b` is defined multiple times
 --> top.rhdl:3:7
  |
3 | struct b {}
  |        ^ previous definition of the type `b` here
7 | fn b() {}
  |    - `b` redefined here
